--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Velzon - Angular 17 Responsive Admin Dashboard Template</title>
+  <title>Task 360</title>
 <!-- <base href="/velzon/angular/default/"> -->
   <!-- <base href="/velzon/angular/default-rtl/">  -->
   <base href="/task-360-angular/">
@@ -14,6 +14,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime.82db635c1adc5b30.js" type="module"></script><script src="polyfills.41e8310ce0cf9b25.js" type="module"></script><script src="scripts.0e5b01af3f8fe401.js" defer></script><script src="main.5ded2b7cf966b481.js" type="module"></script></body>
+<script src="runtime.4266f6348f3b46f1.js" type="module"></script><script src="polyfills.41e8310ce0cf9b25.js" type="module"></script><script src="scripts.0e5b01af3f8fe401.js" defer></script><script src="main.c425ad70d1004ed8.js" type="module"></script></body>
 
 </html>
