--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Task 360</title>
-<!-- <base href="/velzon/angular/default/"> -->
+  <!-- <base href="/velzon/angular/default/"> -->
   <!-- <base href="/velzon/angular/default-rtl/">  -->
   <base href="/task-360-angular/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.ico">
+  <link rel="icon" type="image/png" href="/assets/favicon/favicon.ico">
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbvyBxmMbFhrzP9Z8moyYr6dCr-pzjhBE"></script>
 <link rel="stylesheet" href="styles.239a502b9d3eb2f9.css"></head>
 
 <body>
   <app-root></app-root>
-<script src="runtime.4266f6348f3b46f1.js" type="module"></script><script src="polyfills.41e8310ce0cf9b25.js" type="module"></script><script src="scripts.0e5b01af3f8fe401.js" defer></script><script src="main.c425ad70d1004ed8.js" type="module"></script></body>
+<script src="runtime.049d2c4c9dad3e01.js" type="module"></script><script src="polyfills.41e8310ce0cf9b25.js" type="module"></script><script src="scripts.0e5b01af3f8fe401.js" defer></script><script src="main.c8b7d26f31b04aa5.js" type="module"></script></body>
 
 </html>
